--- a/.env
+++ b/.env
@@ -13,3 +13,9 @@ CLOUDINARY_CLOUD_NAME='defztorhh'
 CLOUDINARY_API_KEY='926113176649889'
 CLOUDINARY_API_SECRET="F3_IrfU7s6_7gJ77mK4N1ROyl1U"
 CLOUDINARY_URL='cloudinary://866818219974955:IBuRKQb5LS70ogm6r9g567di4a8@defztorhh'
+
+
+//endpoints
+LOGIN_USER=
+REGISTER_USER=
+LOGOUT_USER=
