--- a/.env
+++ b/.env
@@ -19,3 +19,4 @@ CLOUDINARY_URL='cloudinary://866818219974955:IBuRKQb5LS70ogm6r9g567di4a8@defztor
 LOGIN_USER=
 REGISTER_USER=
 LOGOUT_USER=
+FRONTEND_URL=
